# hotspot3

./: .gitignore  README.md  environment.macos.yml  environment.yml  extract_cutcounts.sh  install_modwt_conda.sh  peaks_calling.sh  pyproject.toml  setup.py
hotspot2/: extract_cutcounts.sh  main.py  processors.py  signal_smoothing.py  stats.py  track_memory.py  track_usage.py  utils.py
src/hotspot3/: __main__.py  babachi.py  cli.py  config.py  extract_pvals.py  file_extractors.py  fit.py  fit_bg_models.py  fit_models.py  from_configs.py  logging.py  main.py  models.py  multiple_sample_fdr.py  overall_fdr_correction.py.py  processors.py  pvalue.py  segment_fit.py  signal_smoothing.py  stats.py  track_memory.py  utils.py
src/hotspot3/background_fit/: __init__.py  defunc.py  fit.py  genomic_background_fit.py  regression.py  segment_fit.py
src/hotspot3/connectors/: __init__.py  babachi.py  bam2bed.py  bottleneck.py
src/hotspot3/helpers/: colors.py  format_converters.py  models.py  stats.py  steps_solver.py  utils.py
src/hotspot3/io/: __init__.py  colors.py  logging.py  paths.py  readers.py  writers.py
src/hotspot3/peak_calling/: __init__.py  peak_calling.py
src/hotspot3/scoring/: __init__.py  fdr.py  pvalue.py
src/hotspot3/scripts/: extract_cutcounts.sh
src/hotspot3/signal_smoothing/: __init__.py
